malware/localhost_05-18_18-33-0021_C67F20D7/results/localhost_18-33-0021.dynamic.log
18 May 18:33:21 - mailware-jail, a malware sandbox ver. 0.19
18 May 18:33:21 - ------------------------
18 May 18:33:21 - Arguments: --h404 -t 15000 -c ./config_localhost_05-18_18-33-0021_C67F20D7.json ./malware/localhost_05-18_18-33-0021_C67F20D7/localhost_18-33-0021.js
18 May 18:33:21 - Sandbox environment sequence: malware-jail/env/utils.js,malware-jail/env/eval.js,malware-jail/env/function.js,malware-jail/env/wscript.js,malware-jail/env/browser.js,malware-jail/env/agents.js,malware-jail/env/other.js,malware-jail/env/console.js
18 May 18:33:21 - Malware files: ./malware/localhost_05-18_18-33-0021_C67F20D7/localhost_18-33-0021.js
18 May 18:33:21 - Execution timeout set to: 15 seconds
18 May 18:33:21 - Output file for sandbox dump: malware-jail/sandbox_dump_after.json
18 May 18:33:21 - Output directory for generated files: malware-jail/../malware/localhost_05-18_18-33-0021_C67F20D7/output/
18 May 18:33:21 - Download from remote server: Return HTTP/404
18 May 18:33:21 - ==> Preparing Sandbox environment.
18 May 18:33:21 -  => Executing: malware-jail/env/utils.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/eval.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/function.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/wscript.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/browser.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/agents.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/other.js quitely
18 May 18:33:21 -  => Executing: malware-jail/env/console.js quitely
18 May 18:33:21 - ==> Executing malware file(s). =========================================
18 May 18:33:21 -  => Executing: ./malware/localhost_05-18_18-33-0021_C67F20D7/localhost_18-33-0021.js verbosely, reporting silent catches
18 May 18:33:21 - Saving: malware-jail/../malware/localhost_05-18_18-33-0021_C67F20D7/output/._malware_localhost_05-18_18-33-0021_C67F20D7_localhost_18-33-0021.js
18 May 18:33:21 - Saving: malware-jail/../malware/localhost_05-18_18-33-0021_C67F20D7/output/tr_._malware_localhost_05-18_18-33-0021_C67F20D7_localhost_18-33-0021.js
18 May 18:33:21 - WScript.scriptfullname = (string) './malware/localhost_05-18_18-33-0021_C67F20D7/localhost_18-33-0021.js'
18 May 18:33:21 - WScript.arguments = (object) './malware/localhost_05-18_18-33-0021_C67F20D7/localhost_18-33-0021.js,xyz'
18 May 18:33:21 - Exception occured: object ./malware/localhost_05-18_18-33-0021_C67F20D7/localhost_18-33-0021.js:42
interval = (function Object.prototype.currentTime() {
                           ^

SyntaxError: Unexpected token .
    at createScript (vm.js:80:10)
    at Object.runInContext (vm.js:119:10)
    at run_in_ctx (/home/ico/Desktop/Work/WebsiteRaker-20190424T100537Z-001/WebsiteRaker/malware-jail/jailme.js:325:16)
    at Object.<anonymous> (/home/ico/Desktop/Work/WebsiteRaker-20190424T100537Z-001/WebsiteRaker/malware-jail/jailme.js:360:20)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Function.Module.runMain (module.js:693:10)
18 May 18:33:21 - ==> Cleaning up sandbox.
18 May 18:33:21 - ==> Script execution finished, dumping sandbox environment to a file.
18 May 18:33:21 - The sandbox context has been  saved to: malware-jail/sandbox_dump_after.json
